HE-568 Remaining work to get hq-server.sh to invoke bootstrap program using Java Service Wrapper