@@ -2,7 +2,6 @@ package org.hyperic.bootstrap;
 
 import static org.junit.Assert.assertEquals;
 
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
@@ -12,10 +11,11 @@ import org.hyperic.sigar.OperatingSystem;
 import org.hyperic.sigar.SigarException;
 import org.junit.Before;
 import org.junit.Test;
+
 /**
  * Unit test of {@link HQServer}
  * @author jhickey
- *
+ * 
  */
 public class HQServerTest {
 
@@ -25,7 +25,6 @@ public class HQServerTest {
     private EngineController engineController;
     private EmbeddedDatabaseController embeddedDatabaseController;
     private String serverHome = "/Applications/HQ5/server-5.0.0";
-    private String serverPidFile = "/Applications/HQ5/server-5.0.0/logs/hq-server.pid";
     private OperatingSystem osInfo;
 
     @Before
@@ -35,8 +34,8 @@ public class HQServerTest {
         this.engineController = EasyMock.createMock(EngineController.class);
         this.embeddedDatabaseController = EasyMock.createMock(EmbeddedDatabaseController.class);
         this.osInfo = org.easymock.classextension.EasyMock.createMock(OperatingSystem.class);
-        this.server = new HQServer(serverHome, serverPidFile, processManager,
-            embeddedDatabaseController, serverConfigurator, engineController, osInfo);
+        this.server = new HQServer(serverHome, processManager, embeddedDatabaseController,
+            serverConfigurator, engineController, osInfo);
     }
 
     @Test
@@ -63,22 +62,27 @@ public class HQServerTest {
 
     @Test
     public void testStart() throws Exception {
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
+        EasyMock.expect(engineController.isEngineRunning()).andReturn(false);
         serverConfigurator.configure();
         EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(true);
         EasyMock.expect(embeddedDatabaseController.startBuiltInDB()).andReturn(true);
         EasyMock.expect(
             processManager.executeProcess(EasyMock
-                .aryEq(new String[] { serverHome + "/bin/ant",
-                                     "--noconfig",
-                                     "-q",
+                .aryEq(new String[] { "java",
+                                     "-cp",
+                                     serverHome + "/lib/ant-launcher.jar",
                                      "-Dserver.home=" + serverHome,
+                                     "-Dant.home=" + serverHome,
+                                     "org.apache.tools.ant.launch.Launcher",
+                                     "-q",
+                                     "-lib",
+                                     serverHome + "/lib",
                                      "-logger",
                                      "org.hyperic.tools.ant.installer.InstallerLogger",
-                                     "-f",
+                                     "-buildfile",
                                      serverHome + "/data/db-upgrade.xml",
-                                     "upgrade" }), EasyMock.eq(serverHome), EasyMock.eq(true)))
-            .andReturn(0);
+                                     "upgrade" }), EasyMock.eq(serverHome), EasyMock.eq(true),
+                EasyMock.eq(HQServer.DB_UPGRADE_PROCESS_TIMEOUT))).andReturn(0);
         Properties testProps = new Properties();
         testProps.put("server.java.opts",
             "-XX:MaxPermSize=192m -Xmx512m -Xms512m -XX:+HeapDumpOnOutOfMemoryError");
@@ -92,51 +96,50 @@ public class HQServerTest {
         EasyMock.expect(serverConfigurator.getServerProps()).andReturn(testProps);
         org.easymock.classextension.EasyMock.expect(osInfo.getName()).andReturn("Mac OS X");
         EasyMock.expect(engineController.start(expectedOpts)).andReturn(0);
-        EasyMock.expect(serverConfigurator.getServerProps()).andReturn(testProps);
-        EasyMock.expect(processManager.isPortInUse(7080, 90)).andReturn(true);
         replay();
-        int exitCode = server.start();
+        server.start();
         verify();
-        assertEquals(0, exitCode);
     }
 
     @Test
     public void testStartServerAlreadyRunning() throws SigarException {
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(1234l);
+        EasyMock.expect(engineController.isEngineRunning()).andReturn(true);
         replay();
-        int exitCode = server.start();
+        server.start();
         verify();
-        assertEquals(0, exitCode);
     }
 
     @Test
     public void testStartServerUnableToTellIfRunning() throws SigarException {
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andThrow(
-            new SigarException());
+        EasyMock.expect(engineController.isEngineRunning()).andThrow(new SigarException());
         replay();
-        int exitCode = server.start();
+        server.start();
         verify();
-        assertEquals(1, exitCode);
     }
 
     @Test
     public void testStartErrorConfiguring() throws Exception {
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
+        EasyMock.expect(engineController.isEngineRunning()).andReturn(false);
         serverConfigurator.configure();
         EasyMock.expectLastCall().andThrow(new NullPointerException());
         EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(false);
         EasyMock.expect(
             processManager.executeProcess(EasyMock
-                .aryEq(new String[] { serverHome + "/bin/ant",
-                                     "--noconfig",
-                                     "-q",
+                .aryEq(new String[] { "java",
+                                     "-cp",
+                                     serverHome + "/lib/ant-launcher.jar",
                                      "-Dserver.home=" + serverHome,
+                                     "-Dant.home=" + serverHome,
+                                     "org.apache.tools.ant.launch.Launcher",
+                                     "-q",
+                                     "-lib",
+                                     serverHome + "/lib",
                                      "-logger",
                                      "org.hyperic.tools.ant.installer.InstallerLogger",
-                                     "-f",
+                                     "-buildfile",
                                      serverHome + "/data/db-upgrade.xml",
-                                     "upgrade" }), EasyMock.eq(serverHome), EasyMock.eq(true)))
-            .andReturn(0);
+                                     "upgrade" }), EasyMock.eq(serverHome), EasyMock.eq(true),
+                EasyMock.eq(HQServer.DB_UPGRADE_PROCESS_TIMEOUT))).andReturn(0);
         Properties testProps = new Properties();
         testProps.put("server.java.opts",
             "-XX:MaxPermSize=192m -Xmx512m -Xms512m -XX:+HeapDumpOnOutOfMemoryError");
@@ -150,186 +153,60 @@ public class HQServerTest {
         EasyMock.expect(serverConfigurator.getServerProps()).andReturn(testProps);
         org.easymock.classextension.EasyMock.expect(osInfo.getName()).andReturn("Mac OS X");
         EasyMock.expect(engineController.start(expectedOpts)).andReturn(0);
-        EasyMock.expect(serverConfigurator.getServerProps()).andReturn(testProps);
-        EasyMock.expect(processManager.isPortInUse(7080, 90)).andReturn(true);
         replay();
-        int exitCode = server.start();
+        server.start();
         verify();
-        assertEquals(0, exitCode);
     }
 
     @Test
     public void testStartErrorStartingDB() throws Exception {
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
+        EasyMock.expect(engineController.isEngineRunning()).andReturn(false);
         serverConfigurator.configure();
         EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(true);
         EasyMock.expect(embeddedDatabaseController.startBuiltInDB()).andThrow(
             new NullPointerException());
         replay();
-        int exitCode = server.start();
+        server.start();
         verify();
-        assertEquals(1, exitCode);
     }
 
     @Test
     public void testStartStartDBFailed() throws Exception {
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
+        EasyMock.expect(engineController.isEngineRunning()).andReturn(false);
         serverConfigurator.configure();
         EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(true);
         EasyMock.expect(embeddedDatabaseController.startBuiltInDB()).andReturn(false);
         replay();
-        int exitCode = server.start();
+        server.start();
         verify();
-        assertEquals(1, exitCode);
     }
 
     @Test
-    public void testStartWebPortNotBound() throws Exception {
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
-        serverConfigurator.configure();
-        EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(true);
-        EasyMock.expect(embeddedDatabaseController.startBuiltInDB()).andReturn(true);
-        EasyMock.expect(
-            processManager.executeProcess(EasyMock
-                .aryEq(new String[] { serverHome + "/bin/ant",
-                                     "--noconfig",
-                                     "-q",
-                                     "-Dserver.home=" + serverHome,
-                                     "-logger",
-                                     "org.hyperic.tools.ant.installer.InstallerLogger",
-                                     "-f",
-                                     serverHome + "/data/db-upgrade.xml",
-                                     "upgrade" }), EasyMock.eq(serverHome), EasyMock.eq(true)))
-            .andReturn(0);
-        Properties testProps = new Properties();
-        testProps.put("server.java.opts",
-            "-XX:MaxPermSize=192m -Xmx512m -Xms512m -XX:+HeapDumpOnOutOfMemoryError");
-        testProps.put("server.webapp.port", "7080");
-        final List<String> expectedOpts = new ArrayList<String>();
-        expectedOpts.add("-XX:MaxPermSize=192m");
-        expectedOpts.add("-Xmx512m");
-        expectedOpts.add("-Xms512m");
-        expectedOpts.add("-XX:+HeapDumpOnOutOfMemoryError");
-        expectedOpts.add("-Dserver.home=" + serverHome);
-        EasyMock.expect(serverConfigurator.getServerProps()).andReturn(testProps);
-        org.easymock.classextension.EasyMock.expect(osInfo.getName()).andReturn("Mac OS X");
-        EasyMock.expect(engineController.start(expectedOpts)).andReturn(0);
-        EasyMock.expect(serverConfigurator.getServerProps()).andReturn(testProps);
-        EasyMock.expect(processManager.isPortInUse(7080, 90)).andReturn(false);
-        replay();
-        int exitCode = server.start();
-        verify();
-        assertEquals(1, exitCode);
-    }
-
-    @Test
-    public void testStartErrorDeterminingWebPortBound() throws Exception {
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
-        serverConfigurator.configure();
-        EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(true);
-        EasyMock.expect(embeddedDatabaseController.startBuiltInDB()).andReturn(true);
-        EasyMock.expect(
-            processManager.executeProcess(EasyMock
-                .aryEq(new String[] { serverHome + "/bin/ant",
-                                     "--noconfig",
-                                     "-q",
-                                     "-Dserver.home=" + serverHome,
-                                     "-logger",
-                                     "org.hyperic.tools.ant.installer.InstallerLogger",
-                                     "-f",
-                                     serverHome + "/data/db-upgrade.xml",
-                                     "upgrade" }), EasyMock.eq(serverHome), EasyMock.eq(true)))
-            .andReturn(0);
-        Properties testProps = new Properties();
-        testProps.put("server.java.opts",
-            "-XX:MaxPermSize=192m -Xmx512m -Xms512m -XX:+HeapDumpOnOutOfMemoryError");
-        testProps.put("server.webapp.port", "7080");
-        final List<String> expectedOpts = new ArrayList<String>();
-        expectedOpts.add("-XX:MaxPermSize=192m");
-        expectedOpts.add("-Xmx512m");
-        expectedOpts.add("-Xms512m");
-        expectedOpts.add("-XX:+HeapDumpOnOutOfMemoryError");
-        expectedOpts.add("-Dserver.home=" + serverHome);
-        EasyMock.expect(serverConfigurator.getServerProps()).andReturn(testProps);
-        org.easymock.classextension.EasyMock.expect(osInfo.getName()).andReturn("Mac OS X");
-        EasyMock.expect(engineController.start(expectedOpts)).andReturn(0);
-        EasyMock.expect(serverConfigurator.getServerProps()).andReturn(testProps);
-        EasyMock.expect(processManager.isPortInUse(7080, 90)).andThrow(new NullPointerException());
-        replay();
-        int exitCode = server.start();
-        verify();
-        assertEquals(1, exitCode);
-    }
-
-    @Test
-    public void testStop() throws SigarException, IOException {
-        EasyMock.expect(engineController.stop()).andReturn(0);
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
+    public void testStop() throws Exception {
+        EasyMock.expect(engineController.stop()).andReturn(true);
         EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(true);
         EasyMock.expect(embeddedDatabaseController.stopBuiltInDB()).andReturn(true);
         replay();
-        int exitCode = server.stop();
+        server.stop();
         verify();
-        assertEquals(0, exitCode);
     }
-    
+
     @Test
-    public void testStopErrorStoppingEngine() throws SigarException, IOException {
+    public void testStopErrorStoppingEngine() throws Exception {
         EasyMock.expect(engineController.stop()).andThrow(new SigarException());
         replay();
-        int exitCode = server.stop();
+        server.stop();
         verify();
-        assertEquals(1, exitCode);
     }
-    
+
     @Test
-    public void testStopHaltEngine() throws SigarException, IOException {
-        EasyMock.expect(engineController.stop()).andReturn(1);
-        server.serverStopCheckRetries = 2;
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(1234l).times(2);
-        engineController.halt();
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
-        EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(true);
-        EasyMock.expect(embeddedDatabaseController.stopBuiltInDB()).andReturn(true);
-        replay();
-        int exitCode = server.stop();
-        verify();
-        assertEquals(0, exitCode);
-    }
-    
-    @Test
-    public void testStopEvenHaltDoesntWork() throws SigarException, IOException {
-        EasyMock.expect(engineController.stop()).andReturn(1);
-        server.serverStopCheckRetries = 2;
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(1234l).times(2);
-        engineController.halt();
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(1234l);
-        replay();
-        int exitCode = server.stop();
-        verify();
-        assertEquals(1, exitCode);
-    }
-    
-    @Test
-    public void testStopErrorDeterminingIfStopped() throws SigarException, IOException {
-        EasyMock.expect(engineController.stop()).andReturn(1);
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andThrow(new NullPointerException());
-        replay();
-        int exitCode = server.stop();
-        verify();
-        assertEquals(1, exitCode);
-    }
-    
-    @Test
-    public void testStopErrorStoppingBuiltInDB() throws Exception{
-        EasyMock.expect(engineController.stop()).andReturn(0);
-        EasyMock.expect(processManager.getPidFromPidFile(serverPidFile)).andReturn(-1l);
+    public void testStopErrorStoppingBuiltInDB() throws Exception {
+        EasyMock.expect(engineController.stop()).andReturn(true);
         EasyMock.expect(embeddedDatabaseController.shouldUse()).andReturn(true);
         EasyMock.expect(embeddedDatabaseController.stopBuiltInDB()).andThrow(new SigarException());
         replay();
-        int exitCode = server.stop();
+        server.stop();
         verify();
-        assertEquals(1, exitCode);
     }
 
     private void replay() {
